Refactored websockets into Processes, started SQLite database
- Deleted all websocket behaviour
- Added process opening
- Refactored communication between simulator and predictor to work with process's stdin and stdout
- Refactored process opening to work with ProcessBuiéder
- Started writing to SQLite database (Electron could use)
- Wrecked the working of Electron for now because the lack of websockets